Fixed spacing between task rows and within task rows in WBS

--- a/src/components/Projects/WBS/WBSDetail/wbs.css
+++ b/src/components/Projects/WBS/WBSDetail/wbs.css
@@ -85,7 +85,7 @@
 }
 
 .wbsTask {
-  line-height: 14px;
+  line-height: 28px;
 }
 
 .controlBtn {
@@ -115,6 +115,7 @@
 
 .taskName {
   width: 300px;
+  height: 80px;
 }
 
 .taskDrop {
